--- a/vuurwerkschade/css/SEH.css
+++ b/vuurwerkschade/css/SEH.css
@@ -26,15 +26,14 @@ input {
   margin: 0 7px;
 }
 
-div.tooltip {
+
+#toolTipSEH {
   position: absolute;
+  display: none;
+  min-width: 80px;
+  height: auto;
+  background: none repeat scroll 0 0 #ffffff;
+  border: 1px solid #6F257F;
+  padding: 14px;
   text-align: center;
-  width: 135px;
-  height: 40px;
-  padding: 2px;
-  font: 16px sans-serif;
-  background: lightsteelblue;
-  border: 0px;
-  border-radius: 8px;
-  pointer-events: none;
 }
