--- a/vuurwerkschade/css/SEH.css
+++ b/vuurwerkschade/css/SEH.css
@@ -29,6 +29,18 @@ h3 {
     color: blue;
 }
 
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 90px;
+    height: 30px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
 
 #toolTipSEH {
   position: absolute;
