--- a/code/css/fireworks.css
+++ b/code/css/fireworks.css
@@ -12,12 +12,13 @@
 } */
 
 text {
-  font: 14px sans-serif;
+  font: 16px sans-serif;
 }
 
 body {
-  font: 14px sans-serif;
+  font: 16px sans-serif;
 }
+
 
 .subheader {
     color: blue;
@@ -29,7 +30,7 @@ div.tooltip {
     width: auto;
     height: auto;
     padding: 2px;
-    font: 14px sans-serif;
+    font: 16px sans-serif;
     background: black;
     color: #fff;
     border: 0px;
@@ -38,7 +39,8 @@ div.tooltip {
 }
 
 .arc {
-  font: 6px sans-serif;
+  font: 1px sans-serif;
+  color: blue;
 }
 
 #svgFigureHuman {
@@ -46,6 +48,9 @@ div.tooltip {
   height: 600px;
 }
 
+input[type=checkbox] {
+  transform: scale(1.5);
+}
 
 
 .tooltip {
@@ -60,7 +65,7 @@ div.tooltip {
     width: 300px;
     background-color: black;
     color: #fff;
-    font: 14px sans-serif;
+    font: 16px sans-serif;
     text-align: left;
     border-radius: 10px;
     padding: 5px 5px;
@@ -72,6 +77,7 @@ div.tooltip {
 
 .tooltipInfo{
   color: #fff;
+  font: 18px sans-Serif;
 }
 
 .tooltipInfo:hover .content {
@@ -111,42 +117,12 @@ div.tooltip {
     left: 70px;
 }
 
-
-
-
-
 #eye {
   fill: White;
 }
 #heart {
   fill: White;
 }
-
-#head:hover {
-  fill: Red;
-}
-#body:hover {
-  fill: Red;
-}
-#arm:hover {
-  fill: Red;
-}
-#leg:hover {
-  fill: Red;
-}
-#hand:hover {
-  fill: Red;
-}
-#foot:hover {
-  fill: Red;
-}
-#eye:hover {
-  fill: Red;
-}
-#heart:hover {
-  fill: Red;
-}
-
 
 .axis path,
 .axis line {
@@ -158,7 +134,7 @@ div.tooltip {
 
 .line {
   fill: none;
-  stroke: #6F257F;
+  stroke: Blue;
   stroke-width: 1px;
 }
 
@@ -168,13 +144,36 @@ div.tooltip {
 }
 
 .tooltipLinechart circle {
-  fill: #F1F3F3;
-  stroke: #6F257F;
+  fill: none;
+  stroke: Black;
   stroke-width: 1px;
 }
 
+.tooltipLinechart {
+  position: absolute;
+  text-align: left;
+  width: auto;
+  height: auto;
+  padding: 2px;
+  font: 16px sans-serif;
+  background: black;
+  color: #fff;
+  border: 0px;
+  border-radius: 4px;
+  pointer-events: none;
+}
+
 .hover-line {
-  stroke: #6F257F;
-  stroke-width: 2px;
-  stroke-dasharray: 3,3;
+  stroke: Black;
+  stroke-width: 1px;
+  stroke-dasharray: 5,3;
+}
+
+LABEL.indented-checkbox-text
+{
+  margin-left: 2em;
+  display: block;
+  position: relative;
+  margin-top: 0em;  /* make this margin match whatever your line-height is */
+  line-height: 2em;  /* can be set here, or elsewehere */
 }
